--- a/values.yaml
+++ b/values.yaml
@@ -10,7 +10,11 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
   webolog: baltig.infn.it:4567/epics-containers/phoebus-olog-web
-   
+
+olog:
+  image:  "ghcr.io/infn-epics/org-phoebus-service-olog:latest"
+
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
