fixed olog url day break

--- a/templates/cronjob.yaml
+++ b/templates/cronjob.yaml
@@ -31,9 +31,9 @@ spec:
               olog-tool --url http://{{ include "phoebus-services-chart.fullname" . }}.{{.Values.beamline}}.svc:8080/Olog --username {{ .Values.ologBackup.username | quote }} --password {{ .Values.ologBackup.password | quote }} backup --output /nfs/backups/backup_$TIMESTAMP
 
               # Generate reports
-              olog-tool --url http://{{ include "phoebus-services-chart.fullname" . }}.{{.Values.beamline}}.svc:8080/Olog --username {{ .Values.ologBackup.username | quote }} --password {{ .Values.ologBackup.password | quote }} markdown --output /nfs/documents/report_$TIMESTAMP.md --title "{{ .Values.ologBackup.title }} $TIMESTAMP"
-              olog-tool --url http://{{ include "phoebus-services-chart.fullname" . }}.{{.Values.beamline}}.svc:8080/Olog --username {{ .Values.ologBackup.username | quote }} --password {{ .Values.ologBackup.password | quote }} pdf --output /nfs/documents/report_$TIMESTAMP.pdf --title "{{ .Values.ologBackup.title }} $TIMESTAMP"
-              olog-tool --url http://{{ include "phoebus-services-chart.fullname" . }}.{{.Values.beamline}}.svc:8080/Olog --username {{ .Values.ologBackup.username | quote }} --password {{ .Values.ologBackup.password | quote }} html --output /nfs/documents/report.html --title "{{ .Values.ologBackup.title }} $TIMESTAMP"
+              olog-tool --url http://{{ include "phoebus-services-chart.fullname" . }}.{{.Values.beamline}}.svc:8080/Olog --username {{ .Values.ologBackup.username | quote }} --password {{ .Values.ologBackup.password | quote }} markdown --daybreak --output /nfs/documents/report_$TIMESTAMP.md --title "{{ .Values.ologBackup.title }} $TIMESTAMP"
+              olog-tool --url http://{{ include "phoebus-services-chart.fullname" . }}.{{.Values.beamline}}.svc:8080/Olog --username {{ .Values.ologBackup.username | quote }} --password {{ .Values.ologBackup.password | quote }} pdf --daybreak --output /nfs/documents/report_$TIMESTAMP.pdf --title "{{ .Values.ologBackup.title }} $TIMESTAMP"
+              olog-tool --url http://{{ include "phoebus-services-chart.fullname" . }}.{{.Values.beamline}}.svc:8080/Olog --username {{ .Values.ologBackup.username | quote }} --password {{ .Values.ologBackup.password | quote }} html --daybreak --output /nfs/documents/report.html --title "{{ .Values.ologBackup.title }} $TIMESTAMP"
             volumeMounts:
             {{- range .Values.nfsBackups }}
               - name: {{ .name }}
