--- a/templates/cronjob.yaml
+++ b/templates/cronjob.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.phoebusservice "olog" }}
 {{- if .Values.ologBackup.enabled }}
 apiVersion: batch/v1
 kind: CronJob
@@ -48,4 +49,5 @@ spec:
                   path: {{ .path }}
             {{- end }}
           restartPolicy: OnFailure
+{{- end }}
 {{- end }}
