--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -90,7 +90,13 @@ spec:
         - name: {{ .Chart.Name }}
 {{- if eq .Values.phoebusservice "olog" }}
           image: "{{ .Values.olog.image }}"
-{{- else }}     
+{{- else if eq .Values.phoebusservice "saveandrestore" }}
+          image: "{{ .Values.saveandrestore.image }}"
+{{- else if eq .Values.phoebusservice "alarmserver" }}
+          image: "{{ .Values.alarmserver.image }}"
+{{- else if eq .Values.phoebusservice "alarmlogger" }}
+          image: "{{ .Values.alarmlogger.image }}" 
+{{- else }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
 {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -175,25 +181,25 @@ spec:
               {{- end }}
 
               {{- if eq .Values.phoebusservice "saveandrestore" }}
-                elastic={{ .Values.elasticsearch.network.host }}
-                elastichttpport={{ .Values.elasticsearch.http.port }}
-                elasticport={{ .Values.elasticsearch.network.port }}
+                # elastic={{ .Values.elasticsearch.network.host }}
+                # elastichttpport={{ .Values.elasticsearch.http.port }}
+                # elasticport={{ .Values.elasticsearch.network.port }}
 
-                echo "Testing connection to $elastic:$elastichttpport"
-                until curl --silent --fail http://$elastic:$elastichttpport/_cluster/health; do
-                echo "Waiting for Elasticsearch $elastic"
-                sleep 4
-                done
+                # echo "Testing connection to $elastic:$elastichttpport"
+                # until curl --silent --fail http://$elastic:$elastichttpport/_cluster/health; do
+                # echo "Waiting for Elasticsearch $elastic"
+                # sleep 4
+                # done
                 echo "* Starting save and restore phoebus service Elastic $elastic:$elasticport"
                 cd /saveandrestore
                 # java -jar  /phoebus/service-save-and-restore.jar -Delasticsearch.network.host={{ .Values.elasticsearch.network.host }} -Delasticsearch.http.port="{{ .Values.elasticsearch.http.port }}" -Dlogging.level.org.springframework=TRACE -Dlogging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-                java -jar -Djca.use_env=true -Dspring.config.location=file:/config/saveandrestore.properties /saveandrestore/service-save-and-restore.jar  
+                java -jar -Djca.use_env=true -Dspring.config.location=file:/config/saveandrestore.properties service-save-and-restore-*.jar
               {{- end }}
               {{- if eq .Values.phoebusservice "alarmserver" }}
                 ## needs kafka
                 cd /alarmserver
                 
-                settings="-Dspring.config.location=file:/config/alarm.properties /alarmserver/service-alarm-server.jar -noshell -server {{.Values.kafka.host}}:{{.Values.kafka.port}} -settings /phoebus/phoebus_settings.ini"
+                settings="-Dspring.config.location=file:/config/alarm.properties /alarmserver/service-alarm-server-*.jar -noshell -server {{.Values.kafka.host}}:{{.Values.kafka.port}} -settings /phoebus/phoebus_settings.ini"
                 {{- if .Values.alarm.config }}
                 settings="$settings -config {{.Values.alarm.config}}"
                 {{- end }}
@@ -208,7 +214,7 @@ spec:
                 ## needs kafka
                 cd /alarmlogger
                 
-                settings="-Dspring.config.location=file:/config/alarmlogger.properties /alarmlogger/service-alarm-logger.jar  -noshell -bootstrap.servers {{.Values.kafka.host}}:{{.Values.kafka.port}} -es_host {{ .Values.elasticsearch.network.host }} -es_port {{ .Values.elasticsearch.http.port }} -topics {{.Values.alarm.topics}}"
+                settings="-Dspring.config.location=file:/config/alarmlogger.properties /alarmlogger/service-alarm-logger-*.jar  -noshell -bootstrap.servers {{.Values.kafka.host}}:{{.Values.kafka.port}} -es_host {{ .Values.elasticsearch.network.host }} -es_port {{ .Values.elasticsearch.http.port }} -topics {{.Values.alarm.topics}}"
                 
                 echo "starting java -jar $settings"
                 java -jar $settings
