--- a/values.yaml
+++ b/values.yaml
@@ -3,6 +3,8 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
+initcontainer: 
+  image: " ghcr.io/infn-epics/container-init:latest"
 
 image:
   repository: baltig.infn.it:4567/epics-containers/phoebus-base-docker
